--- a/src/main/resources/com/example/menu/letoltes2.fxml
+++ b/src/main/resources/com/example/menu/letoltes2.fxml
@@ -6,10 +6,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.text.Font?>
 <AnchorPane prefHeight="316.0" prefWidth="756.0" scaleShape="false" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.menu.Letoltes2Controller">
     <children>
-        <Label layoutX="1.0" layoutY="14.0" prefHeight="25.0" prefWidth="602.0" text="Az egyes valuták árfolyma adott napon" textFill="#e30202" />
-
+        <Label layoutX="1.0" layoutY="14.0" prefHeight="25.0" prefWidth="602.0" text="Az egyes valuták árfolyma adott napon" textFill="#e30202" >
+        <font>
+            <Font size="18.0" />
+        </font></Label>
 
         <Label layoutX="18.0" layoutY="40.0" prefHeight="17.0" prefWidth="738.0" text=" " />
         <Label layoutX="214.0" layoutY="104.0">Valuta:</Label>
